# SpotifyLibraryBuilder

./: README.md  env.template  pyproject.toml
src/spotify_library_builder/: __init__.py  __main__.py  cli.py  config.py  converter.py  spotify_client.py  utils.py  youtube_client.py
src/spotify_library_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
